[metadata]
name = pyeee
description = pyeee: a library providing parameter screening of computational models using the Morris method of Elementary Effects or its extension of Efficient Elementary Effects by Cuntz, Mai et al. (Water Res Research, 2015).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcuntz/pyeee
author = Matthias Cuntz, Juliane Mai
author_email = mc@macu.de
maintainer = Matthias Cuntz
maintainer_email = mc@macu.de
license = MIT
license_files = LICENSE, AUTHORS*
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://mcuntz.github.io/pyeee/
    Source = https://github.com/mcuntz/pyeee
    Tracker = https://github.com/mcuntz/pyeee/issues
    Changelog = https://github.com/mcuntz/pyeee/blob/main/CHANGELOG.rst
    Conda-Forge = https://anaconda.org/conda-forge/pyeee

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    schwimmbad
    pyjams
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    numpydoc>=1.1,<2
    jinja2>=2
    sphinx>=4,<7
    sphinx_book_theme>=1.0.1
test =
    partialwrap
    setuptools>=42
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
